change package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@profanis/buildwithmyip",
-  "version": "0.0.1",
+  "name": "buildwithmyip",
+  "version": "0.0.2",
   "description": "uses your local ip when build your ionic app on your device",
   "main": "index.js",
   "private": false,
